@@ -918,14 +918,13 @@ enum identtype identify(char *);
 static void push_string(char *str);
 static int found_end();
 static int found_eof();
-static int stringtolong(char *string, int radix);
 
 static struct symbol *current_definition;	/* Used in #define */
 static int quoted; /* Used to prevent #define expansion in ifdef and 
                       ifndef... */
 static int force_decimal; /* Used to force decimal in errorlevel */
 
-#line 929 "lex.yy.c"
+#line 928 "lex.yy.c"
 
 /* Macros after this point can all be overridden by user definitions in
  * section 1.
@@ -1079,9 +1078,9 @@ YY_DECL
 	register char *yy_cp = NULL, *yy_bp = NULL;
 	register int yy_act;
 
-#line 63 "scan.l"
+#line 62 "scan.l"
 
-#line 1085 "lex.yy.c"
+#line 1084 "lex.yy.c"
 
 	if ( yy_init )
 		{
@@ -1170,7 +1169,7 @@ case YY_STATE_EOF(define):
 case YY_STATE_EOF(definition):
 case YY_STATE_EOF(title):
 case YY_STATE_EOF(subtitle):
-#line 64 "scan.l"
+#line 63 "scan.l"
 {
 			   if (found_eof())
 			     yyterminate();
@@ -1178,7 +1177,7 @@ case YY_STATE_EOF(subtitle):
 	YY_BREAK
 case 1:
 YY_RULE_SETUP
-#line 68 "scan.l"
+#line 67 "scan.l"
 {
 			   found_end();
 			   yyterminate();
@@ -1186,12 +1185,12 @@ YY_RULE_SETUP
 	YY_BREAK
 case 2:
 YY_RULE_SETUP
-#line 72 "scan.l"
+#line 71 "scan.l"
 { BEGIN(title); }
 	YY_BREAK
 case 3:
 YY_RULE_SETUP
-#line 73 "scan.l"
+#line 72 "scan.l"
 { /* got the title text */
 #define LEN sizeof(state.lst.title_name)
                            yytext[yyleng - 1] = '\0';
@@ -1203,22 +1202,22 @@ YY_RULE_SETUP
 	YY_BREAK
 case 4:
 YY_RULE_SETUP
-#line 81 "scan.l"
+#line 80 "scan.l"
 { BEGIN(subtitle); }
 	YY_BREAK
 case 5:
 YY_RULE_SETUP
-#line 82 "scan.l"
+#line 81 "scan.l"
 { BEGIN(subtitle); }
 	YY_BREAK
 case 6:
 YY_RULE_SETUP
-#line 83 "scan.l"
+#line 82 "scan.l"
 { BEGIN(subtitle); }
 	YY_BREAK
 case 7:
 YY_RULE_SETUP
-#line 84 "scan.l"
+#line 83 "scan.l"
 { /* got the subtitle text */
 #define LEN sizeof(state.lst.subtitle_name)
                            yytext[yyleng - 1] = '\0';
@@ -1230,14 +1229,14 @@ YY_RULE_SETUP
 	YY_BREAK
 case 8:
 YY_RULE_SETUP
-#line 92 "scan.l"
+#line 91 "scan.l"
 {
 			   return CBLOCK;
 			 }
 	YY_BREAK
 case 9:
 YY_RULE_SETUP
-#line 95 "scan.l"
+#line 94 "scan.l"
 {
 			   /* Force decimal interpretation for errorlevel*/
 			   force_decimal = 1;
@@ -1247,14 +1246,14 @@ YY_RULE_SETUP
 	YY_BREAK
 case 10:
 YY_RULE_SETUP
-#line 101 "scan.l"
+#line 100 "scan.l"
 {
 			   return ENDC;
 			 }
 	YY_BREAK
 case 11:
 YY_RULE_SETUP
-#line 104 "scan.l"
+#line 103 "scan.l"
 {
 			   /* fill with ( ) as first argument */
 			   yylval.i = FILL;
@@ -1263,14 +1262,14 @@ YY_RULE_SETUP
 	YY_BREAK
 case 12:
 YY_RULE_SETUP
-#line 109 "scan.l"
+#line 108 "scan.l"
 {
                            BEGIN(define);
 			 }
 	YY_BREAK
 case 13:
 YY_RULE_SETUP
-#line 112 "scan.l"
+#line 111 "scan.l"
 {
                            if((asm_enabled()) && (!state.mac_prev)) {
 			     if ((get_symbol(state.stDefines, yytext) != NULL)
@@ -1291,7 +1290,7 @@ case 14:
 yy_c_buf_p = yy_cp -= 1;
 YY_DO_BEFORE_ACTION; /* set up yytext again */
 YY_RULE_SETUP
-#line 126 "scan.l"
+#line 125 "scan.l"
 {
                            if((asm_enabled()) && (!state.mac_prev)) {
 			     char *string_ptr = yytext;
@@ -1323,7 +1322,7 @@ YY_RULE_SETUP
 	YY_BREAK
 case 15:
 YY_RULE_SETUP
-#line 154 "scan.l"
+#line 153 "scan.l"
 {
 			   yylval.i = UPPER;
 			   return UPPER;
@@ -1331,7 +1330,7 @@ YY_RULE_SETUP
 	YY_BREAK
 case 16:
 YY_RULE_SETUP
-#line 158 "scan.l"
+#line 157 "scan.l"
 {
 			   yylval.i = HIGH;
 			   return HIGH;
@@ -1339,7 +1338,7 @@ YY_RULE_SETUP
 	YY_BREAK
 case 17:
 YY_RULE_SETUP
-#line 162 "scan.l"
+#line 161 "scan.l"
 {
 			   yylval.i = LOW;
 			   return LOW;
@@ -1347,7 +1346,7 @@ YY_RULE_SETUP
 	YY_BREAK
 case 18:
 YY_RULE_SETUP
-#line 166 "scan.l"
+#line 165 "scan.l"
 {
 			  /* Force decimal interpretation for list*/
 			  force_decimal = 1;
@@ -1357,7 +1356,7 @@ YY_RULE_SETUP
 	YY_BREAK
 case 19:
 YY_RULE_SETUP
-#line 172 "scan.l"
+#line 171 "scan.l"
 {
 			   /* #else and else can appear in column 1 */
 			   yylval.s = strdup(yytext);
@@ -1366,7 +1365,7 @@ YY_RULE_SETUP
 	YY_BREAK
 case 20:
 YY_RULE_SETUP
-#line 177 "scan.l"
+#line 176 "scan.l"
 {
 			   /* only #endif can appear in column 1 */
 			   yylval.s = strdup(yytext);
@@ -1375,7 +1374,7 @@ YY_RULE_SETUP
 	YY_BREAK
 case 21:
 YY_RULE_SETUP
-#line 182 "scan.l"
+#line 181 "scan.l"
 {
 			   /* #ifdef and ifdef can appear in column 1 */
 			   quoted = 1;
@@ -1385,7 +1384,7 @@ YY_RULE_SETUP
 	YY_BREAK
 case 22:
 YY_RULE_SETUP
-#line 188 "scan.l"
+#line 187 "scan.l"
 {
 			   /* #ifndef and ifdef can appear in column 1 */
 			   quoted = 1;
@@ -1395,7 +1394,7 @@ YY_RULE_SETUP
 	YY_BREAK
 case 23:
 YY_RULE_SETUP
-#line 194 "scan.l"
+#line 193 "scan.l"
 {
 			   /* #include and include can appear in column 1 */
 			   yylval.s = strdup(yytext);
@@ -1404,7 +1403,7 @@ YY_RULE_SETUP
 	YY_BREAK
 case 24:
 YY_RULE_SETUP
-#line 199 "scan.l"
+#line 198 "scan.l"
 {
 			   /* #undefine can appear in column 1 */
 			   quoted = 1;
@@ -1414,7 +1413,7 @@ YY_RULE_SETUP
 	YY_BREAK
 case 25:
 YY_RULE_SETUP
-#line 205 "scan.l"
+#line 204 "scan.l"
 {
                            yytext[strlen(yytext) - 3] = '\0';
                            yylval.s = strdup(yytext);
@@ -1423,7 +1422,7 @@ YY_RULE_SETUP
 	YY_BREAK
 case 26:
 YY_RULE_SETUP
-#line 210 "scan.l"
+#line 209 "scan.l"
 { 
 			   int has_collon = 0;
 			   struct symbol *sym;
@@ -1484,7 +1483,7 @@ YY_RULE_SETUP
 	YY_BREAK
 case 27:
 YY_RULE_SETUP
-#line 267 "scan.l"
+#line 266 "scan.l"
 {
                            yytext[strlen(yytext) - 3] = '\0';
                            yylval.s = strdup(yytext);
@@ -1493,7 +1492,7 @@ YY_RULE_SETUP
 	YY_BREAK
 case 28:
 YY_RULE_SETUP
-#line 272 "scan.l"
+#line 271 "scan.l"
 {
                            yylval.s = strdup(yytext+1);
                            return VAR_END;
@@ -1501,7 +1500,7 @@ YY_RULE_SETUP
 	YY_BREAK
 case 29:
 YY_RULE_SETUP
-#line 276 "scan.l"
+#line 275 "scan.l"
 {
 			   struct symbol *sym;
 
@@ -1532,7 +1531,7 @@ YY_RULE_SETUP
 	YY_BREAK
 case 30:
 YY_RULE_SETUP
-#line 303 "scan.l"
+#line 302 "scan.l"
 {
 /* Ugh.  As a special case, treat processor names, such as 16C84
 as identifiers rather than as hex numbers. */
@@ -1542,7 +1541,7 @@ as identifiers rather than as hex numbers. */
 	YY_BREAK
 case 31:
 YY_RULE_SETUP
-#line 309 "scan.l"
+#line 308 "scan.l"
 {
                            yylval.i = stringtolong(yytext + 2, 16);
 			   return NUMBER;
@@ -1550,7 +1549,7 @@ YY_RULE_SETUP
 	YY_BREAK
 case 32:
 YY_RULE_SETUP
-#line 313 "scan.l"
+#line 312 "scan.l"
 {
                            if (state.radix == 16) {
                              yylval.i = stringtolong(yytext, 16);                           
@@ -1563,7 +1562,7 @@ YY_RULE_SETUP
 	YY_BREAK
 case 33:
 YY_RULE_SETUP
-#line 322 "scan.l"
+#line 321 "scan.l"
 {
                            yytext[yyleng - 1] = '\0';
 			   yylval.i = stringtolong(yytext + 2, 2);
@@ -1572,7 +1571,7 @@ YY_RULE_SETUP
 	YY_BREAK
 case 34:
 YY_RULE_SETUP
-#line 327 "scan.l"
+#line 326 "scan.l"
 {			 
                            yytext[yyleng - 1] = '\0';
                            yylval.i = stringtolong(yytext, 8);
@@ -1581,7 +1580,7 @@ YY_RULE_SETUP
 	YY_BREAK
 case 35:
 YY_RULE_SETUP
-#line 332 "scan.l"
+#line 331 "scan.l"
 {
                            yytext[yyleng - 1] = '\0';
 			   yylval.i = stringtolong(yytext + 2, 8);
@@ -1590,7 +1589,7 @@ YY_RULE_SETUP
 	YY_BREAK
 case 36:
 YY_RULE_SETUP
-#line 337 "scan.l"
+#line 336 "scan.l"
 {
                            if (state.radix == 16) {
                              yylval.i = stringtolong(yytext, 16);                           
@@ -1603,7 +1602,7 @@ YY_RULE_SETUP
 	YY_BREAK
 case 37:
 YY_RULE_SETUP
-#line 346 "scan.l"
+#line 345 "scan.l"
 {
                            yytext[yyleng - 1] = '\0';
 			   yylval.i = stringtolong(yytext + 2, 10);
@@ -1612,7 +1611,7 @@ YY_RULE_SETUP
 	YY_BREAK
 case 38:
 YY_RULE_SETUP
-#line 351 "scan.l"
+#line 350 "scan.l"
 {
                            yylval.i = stringtolong(yytext + 1, 10);
 			   return NUMBER;
@@ -1620,7 +1619,7 @@ YY_RULE_SETUP
 	YY_BREAK
 case 39:
 YY_RULE_SETUP
-#line 355 "scan.l"
+#line 354 "scan.l"
 {			 
                            yytext[yyleng - 1] = '\0';
                            yylval.i = stringtolong(yytext, 16);
@@ -1629,7 +1628,7 @@ YY_RULE_SETUP
 	YY_BREAK
 case 40:
 YY_RULE_SETUP
-#line 360 "scan.l"
+#line 359 "scan.l"
 {
                            yytext[yyleng - 1] = '\0';
 			   yylval.i = stringtolong(yytext + 2, 16);
@@ -1638,7 +1637,7 @@ YY_RULE_SETUP
 	YY_BREAK
 case 41:
 YY_RULE_SETUP
-#line 365 "scan.l"
+#line 364 "scan.l"
 {
                            if (force_decimal) {
                              yylval.i = stringtolong(yytext, 10);
@@ -1650,7 +1649,7 @@ YY_RULE_SETUP
 	YY_BREAK
 case 42:
 YY_RULE_SETUP
-#line 373 "scan.l"
+#line 372 "scan.l"
 {
                            yylval.i = gpasm_magic(yytext + 1);
 			   return NUMBER;
@@ -1658,7 +1657,7 @@ YY_RULE_SETUP
 	YY_BREAK
 case 43:
 YY_RULE_SETUP
-#line 377 "scan.l"
+#line 376 "scan.l"
 {
 			   char *pc = &yytext[yyleng - 1];
 			   if (*pc == '"')
@@ -1671,7 +1670,7 @@ YY_RULE_SETUP
 	YY_BREAK
 case 44:
 YY_RULE_SETUP
-#line 386 "scan.l"
+#line 385 "scan.l"
 {
 			   /* treat include pathes as strings */
 			   char *pc = &yytext[yyleng - 1];
@@ -1682,7 +1681,7 @@ YY_RULE_SETUP
 	YY_BREAK
 case 45:
 YY_RULE_SETUP
-#line 393 "scan.l"
+#line 392 "scan.l"
 {
                            yylval.i = gpasm_magic(yytext + 1);
 			   return NUMBER;
@@ -1690,7 +1689,7 @@ YY_RULE_SETUP
 	YY_BREAK
 case 46:
 YY_RULE_SETUP
-#line 397 "scan.l"
+#line 396 "scan.l"
 {
                            yylval.i = yytext[2];
 			   return NUMBER;
@@ -1698,127 +1697,127 @@ YY_RULE_SETUP
 	YY_BREAK
 case 47:
 YY_RULE_SETUP
-#line 401 "scan.l"
+#line 400 "scan.l"
 OPERATOR(LSH);
 	YY_BREAK
 case 48:
 YY_RULE_SETUP
-#line 402 "scan.l"
+#line 401 "scan.l"
 OPERATOR(RSH);
 	YY_BREAK
 case 49:
 YY_RULE_SETUP
-#line 403 "scan.l"
+#line 402 "scan.l"
 OPERATOR(GREATER_EQUAL);
 	YY_BREAK
 case 50:
 YY_RULE_SETUP
-#line 404 "scan.l"
+#line 403 "scan.l"
 OPERATOR(LESS_EQUAL);
 	YY_BREAK
 case 51:
 YY_RULE_SETUP
-#line 405 "scan.l"
+#line 404 "scan.l"
 OPERATOR(EQUAL);
 	YY_BREAK
 case 52:
 YY_RULE_SETUP
-#line 406 "scan.l"
+#line 405 "scan.l"
 OPERATOR(NOT_EQUAL);
 	YY_BREAK
 case 53:
 YY_RULE_SETUP
-#line 407 "scan.l"
+#line 406 "scan.l"
 OPERATOR(LOGICAL_AND);
 	YY_BREAK
 case 54:
 YY_RULE_SETUP
-#line 408 "scan.l"
+#line 407 "scan.l"
 OPERATOR(LOGICAL_OR);
 	YY_BREAK
 case 55:
 YY_RULE_SETUP
-#line 410 "scan.l"
+#line 409 "scan.l"
 OPERATOR(ASSIGN_PLUS);
 	YY_BREAK
 case 56:
 YY_RULE_SETUP
-#line 411 "scan.l"
+#line 410 "scan.l"
 OPERATOR(ASSIGN_MINUS);
 	YY_BREAK
 case 57:
 YY_RULE_SETUP
-#line 412 "scan.l"
+#line 411 "scan.l"
 OPERATOR(ASSIGN_MULTIPLY);
 	YY_BREAK
 case 58:
 YY_RULE_SETUP
-#line 413 "scan.l"
+#line 412 "scan.l"
 OPERATOR(ASSIGN_DIVIDE);
 	YY_BREAK
 case 59:
 YY_RULE_SETUP
-#line 414 "scan.l"
+#line 413 "scan.l"
 OPERATOR(ASSIGN_MODULUS);
 	YY_BREAK
 case 60:
 YY_RULE_SETUP
-#line 415 "scan.l"
+#line 414 "scan.l"
 OPERATOR(ASSIGN_LSH);
 	YY_BREAK
 case 61:
 YY_RULE_SETUP
-#line 416 "scan.l"
+#line 415 "scan.l"
 OPERATOR(ASSIGN_RSH);
 	YY_BREAK
 case 62:
 YY_RULE_SETUP
-#line 417 "scan.l"
+#line 416 "scan.l"
 OPERATOR(ASSIGN_AND);
 	YY_BREAK
 case 63:
 YY_RULE_SETUP
-#line 418 "scan.l"
+#line 417 "scan.l"
 OPERATOR(ASSIGN_OR);
 	YY_BREAK
 case 64:
 YY_RULE_SETUP
-#line 419 "scan.l"
+#line 418 "scan.l"
 OPERATOR(ASSIGN_XOR);
 	YY_BREAK
 case 65:
 YY_RULE_SETUP
-#line 421 "scan.l"
+#line 420 "scan.l"
 OPERATOR(INCREMENT);
 	YY_BREAK
 case 66:
 YY_RULE_SETUP
-#line 422 "scan.l"
+#line 421 "scan.l"
 OPERATOR(DECREMENT);
 	YY_BREAK
 case 67:
 YY_RULE_SETUP
-#line 424 "scan.l"
+#line 423 "scan.l"
 OPERATOR(TBL_POST_INC);
 	YY_BREAK
 case 68:
 YY_RULE_SETUP
-#line 425 "scan.l"
+#line 424 "scan.l"
 OPERATOR(TBL_POST_DEC);
 	YY_BREAK
 case 69:
 YY_RULE_SETUP
-#line 426 "scan.l"
+#line 425 "scan.l"
 OPERATOR(TBL_PRE_INC);
 	YY_BREAK
 case 70:
 YY_RULE_SETUP
-#line 428 "scan.l"
+#line 427 "scan.l"
 
 	YY_BREAK
 case 71:
 YY_RULE_SETUP
-#line 429 "scan.l"
+#line 428 "scan.l"
 {
 			   quoted = 0;
 			   force_decimal = 0;
@@ -1827,12 +1826,12 @@ YY_RULE_SETUP
 	YY_BREAK
 case 72:
 YY_RULE_SETUP
-#line 434 "scan.l"
+#line 433 "scan.l"
 {  }
 	YY_BREAK
 case 73:
 YY_RULE_SETUP
-#line 435 "scan.l"
+#line 434 "scan.l"
 { 
 			   yylval.i = yytext[0];
 		           return yytext[0];
@@ -1840,10 +1839,10 @@ YY_RULE_SETUP
 	YY_BREAK
 case 74:
 YY_RULE_SETUP
-#line 439 "scan.l"
+#line 438 "scan.l"
 ECHO;
 	YY_BREAK
-#line 1847 "lex.yy.c"
+#line 1846 "lex.yy.c"
 
 	case YY_END_OF_BUFFER:
 		{
@@ -2724,7 +2723,7 @@ int main()
 	return 0;
 	}
 #endif
-#line 439 "scan.l"
+#line 438 "scan.l"
 
 
 void open_src(char *name, int isinclude)
@@ -2855,17 +2854,6 @@ void close_file()
 
   if (old->type == file) {
     if (old->f != NULL) {
-      #ifndef __MSDOS__
-        fseek(old->f, -1, SEEK_END);
-        if (fgetc(old->f) != '\n') {
-          char complaint[BUFSIZ];
-
-          sprintf(complaint,
-                  "Missing newline before EOF in file \"%s\"",
-                  old->name);
-          gpwarning(GPW_UNKNOWN, complaint);
-        }
-      #endif
       fclose(old->f);
     }
     if (old->lst.f != NULL)
@@ -2967,26 +2955,5 @@ enum identtype identify(char *text)
   }
 
   return type;
-}
-
-static int
-stringtolong(char *string, int radix)
-{
-  char *endptr;
-  int value;
-  
-  value = strtol(string, &endptr, radix);                           
-  if ((endptr == NULL) || (*endptr != '\0')) {
-    char complaint[80];
-
-    sprintf(complaint,
-            isprint(*endptr) ?
-            "Illegal character '%c' in numeric constant " :
-            "Illegal character %#x in numeric constant" ,
-            *endptr);
-    gperror(GPE_UNKNOWN, complaint);
-  }
-
-  return value;
 }
 
